# liteide

liteidex/: deploy.sh  liteide_de.ts  liteide_fr.ts  liteide_ja.ts  liteide_ru.ts  liteide_tr.ts  liteide_uk.ts  liteide_zh.ts  liteide_zh_TW.ts  liteidex.pri  meson.build  meson_options.txt
liteidex/.cache/clangd/index/: BackwardsScanner.h.611DA3A33EE5CBEA.idx  GoPlayBrowser.h.AF3E90A052EE9CFE.idx  Lexer.h.CF4EC805B50EF530.idx  Parser.2DC6C7805E6BB0CF.idx  Serializer.572245A12F9BC33F.idx  SimpleLexer.h.F95F4568B3CB0E4F.idx  Token.h.807ECC7BE49F73B2.idx  aboutdialog.cpp.3681B34D7D000EE7.idx  aboutdialog.h.18D22832EB5CFCB1.idx  abstractmultiproxymodel.h.83AB084ABCA8CF45.idx  abstractmultiproxymodel_p.h.FC1A552659F19375.idx  acpapi.h.EB72160C3CFE7471.idx  acpclient.cpp.E0E238211B0BD002.idx  acpclient.h.3978412A195203B8.idx  acpoption.cpp.B89838EC7CAA5225.idx  acpoption.h.0E0A65054891D318.idx  acpplugin.cpp.4161A3DC8B9487B4.idx  acpplugin.h.38428B628D28E97B.idx  actionmanager.cpp.FA8BEDBE253ACC91.idx  actionmanager.h.74804C06EEDF0E36.idx  astwidget.cpp.5098208375C11D38.idx  astwidget.h.533C0639ABB18638.idx  autocompleter.h.0F8398FD134F5D17.idx  basefolderview.h.E0FF4B58DB3F9F54.idx  basefoldeview.h.C6DD2542A71DEFA3.idx  basetextblockselection.h.966F477894969A8E.idx  basetextdocumentlayout.h.662181A41315283A.idx  bookmarkmanager.cpp.946C75CC10549005.idx  bookmarkmanager.h.A182CCA2B2F3158D.idx  bookmarkmodel.cpp.D52D10D676ABD94F.idx  bookmarkmodel.h.574ADDCB75E76623.idx  bookmarks_global.h.98B461B92F1A93FC.idx  bookmarksplugin.cpp.B4C3104C18FEC60B.idx  bookmarksplugin.h.A2379F73CEE6FAE5.idx  build.cpp.9ADDA5C748C638C3.idx  build.h.9D56B2AE7ABD61D1.idx  buildconfigdialog.cpp.BC26F418552F843C.idx  buildconfigdialog.h.5CFFFFC0C45F4435.idx  buildmanager.cpp.320C77EC6CBF73F8.idx  buildmanager.h.AD3D9DA7FDAAE7FF.idx  (+512 more)
liteidex/deploy/liteapp/config/: global.ini
liteidex/deploy/litebuild/: build.md
liteidex/src/: meson.build
liteidex/src/api/: meson.build
liteidex/src/api/acpapi/: acpapi.h  acpapi.pro  meson.build
liteidex/src/api/docbrowserapi/: meson.build
liteidex/src/api/golangastapi/: meson.build
liteidex/src/api/golangdocapi/: meson.build
liteidex/src/api/liteapi/: liteapi.h  meson.build
liteidex/src/api/litebuildapi/: meson.build
liteidex/src/api/litedebugapi/: meson.build
liteidex/src/api/liteeditorapi/: meson.build
liteidex/src/api/liteenvapi/: meson.build
liteidex/src/api/litefindapi/: meson.build
liteidex/src/api/litettyapi/: meson.build
liteidex/src/api/quickopenapi/: meson.build
liteidex/src/api/terminalapi/: meson.build
liteidex/src/liteapp/: editormanager.cpp  filemanager.cpp  liteapp.cpp  liteappoption.cpp  macsupport.h  main.cpp  mainwindow.cpp  meson.build  newfiledialog.cpp  openeditorswidget.cpp  optionmanager.cpp  optionsbrowser.cpp  pluginmanager.cpp  sidewindowstyle.cpp  splitfolderwindow.cpp  tooldockwidget.cpp
liteidex/src/liteide/: meson.build
liteidex/src/pch/: liteide_pch.h
liteidex/src/plugins/: meson.build
liteidex/src/plugins/acp/: acp.pro  acpclient.cpp  acpclient.h  acpoption.cpp  acpoption.h  acpoption.ui  acpoption_global.h  acpplugin.cpp  acpplugin.h  meson.build
liteidex/src/plugins/bookmarks/: bookmarkmodel.cpp  meson.build
liteidex/src/plugins/dlvdebugger/: dlvdebugger.cpp  dlvrpcdebugger.cpp  meson.build
liteidex/src/plugins/fakevimedit/: meson.build
liteidex/src/plugins/filebrowser/: filebrowser.cpp  meson.build
liteidex/src/plugins/golangast/: astwidget.cpp  meson.build
liteidex/src/plugins/golangcode/: golangcode.cpp  meson.build
liteidex/src/plugins/golangdoc/: findapiwidget.cpp  finddocwidget.cpp  golangdoc.cpp  meson.build
liteidex/src/plugins/golangedit/: golangedit.cpp  golangfilesearch.cpp  golangfilesearch.h  golanghighlighter.cpp  golanghighlighter.h  golanghighlighterfactory.cpp  goplsfilesearch.cpp  meson.build
liteidex/src/plugins/golangfmt/: golangfmt.cpp  meson.build
liteidex/src/plugins/golanglint/: golanglint.cpp
liteidex/src/plugins/golangpackage/: meson.build  packagebrowser.cpp  packageproject.cpp
liteidex/src/plugins/golangplay/: GoPlayBrowser.cpp  GoPlayBrowser.h  golangplayplugin.cpp  goplaybrowser.cpp  goplaybrowser.h  meson.build
liteidex/src/plugins/golangpresent/: golangpresentedit.cpp  meson.build
liteidex/src/plugins/imageeditor/: imageeditor.cpp  imageeditorfile.cpp  imageeditorwidget.cpp  meson.build
liteidex/src/plugins/jsonedit/: jsonedit.cpp  meson.build
liteidex/src/plugins/litebuild/: litebuild.cpp  litebuildoption.cpp  litebuildplugin.cpp  meson.build
liteidex/src/plugins/litedebug/: debugwidget.cpp  litedebug.cpp  meson.build
liteidex/src/plugins/liteeditor/: codecompleter.cpp  faketooltip.cpp  functiontooltip.cpp  highlightermanager.cpp  liteeditor.cpp  liteeditor.h  liteeditorfile.cpp  liteeditorfile.h  liteeditoroption.cpp  liteeditorplugin.cpp  liteeditorwidget.cpp  liteeditorwidgetbase.cpp  liteeditorwidgetbase.h  litewordcompleter.cpp  litewordcompleter.h  meson.build
liteidex/src/plugins/liteenv/: envmanager.cpp  liteenvoption.cpp  meson.build
liteidex/src/plugins/litefind/: filesearch.cpp  filesearch.h  findeditor.cpp  litefindplugin.h  meson.build  (+1 more)
liteidex/src/utils/: meson.build
liteidex/subprojects/cmark/: meson.build
liteidex/subprojects/fakevim/: meson.build
liteidex/subprojects/libvterm/: meson.build
liteidex/subprojects/qjsonrpc/: meson.build
liteidex/ui_gen/: ui_acpoption.h  ui_buildconfigdialog.h  ui_dlvdebuggeroption.h  ui_exportdialog.h  ui_fakevimeditoption.h  ui_filebrowseroption.h  ui_gdbdebuggeroption.h  ui_goaddtagsdialog.h  ui_golangastoption.h  ui_golangcodeoption.h  ui_golangdocoption.h  ui_golangeditoption.h  ui_golangfmtoption.h  ui_golanglintoption.h  ui_golangpackageoption.h  ui_goremovetagsdialog.h  ui_importgopathdialog.h  ui_litebuildoption.h  ui_litedebugoption.h  ui_liteeditoroption.h  ui_liteenvoption.h  ui_markdownbatchwidget.h  ui_optionswidget.h  ui_pluginsdialog.h  ui_qsqleditor.h  ui_quickopenoption.h  ui_selectexternaldialog.h  ui_tableviewwidget.h  ui_terminaloption.h
(+80 files in other folders)
