# API modules - all header-only

api_subdirs = [
  'liteapi',
  'liteenvapi',
  'litefindapi',
  'litebuildapi',
  'liteeditorapi',
  'litedebugapi',
  'litettyapi',
  'docbrowserapi',
  'golangdocapi',
  'golangastapi',
  'quickopenapi',
  'terminalapi',
]

foreach api : api_subdirs
  subdir(api)
endforeach
