# Plugins - static libraries

plugin_subdirs = [
  'welcome',
  'liteenv',
  'litebuild',
  'liteeditor',
  'litefind',
  'litedebug',
  'litetty',
  'quickopen',
  'filebrowser',
  'golangast',
  'golangedit',
  'golangfmt',
  # 'golangcode',  # TEMPORARILY COMMENTED - needs gocode removal review
  'golangdoc',
  'golangplay',
  'golangpackage',
  'golangpresent',
  'markdown',
  'jsonedit',
  'rustedit',
  'dlvdebugger',
  'fakevimedit',
  'bookmarks',
  'imageeditor',
  'terminal',
  'acp',
]

foreach plugin : plugin_subdirs
  subdir(plugin)
endforeach
