# golangcode - plugin (DISABLED - needs gocode removal review)

# This plugin is temporarily disabled because it depends on gocode
# which is being removed in favor of gopls.
# Review needed before enabling.

# plugin_sources = [
#   'golangcodeplugin.cpp',
#   'golangcode.cpp',
#   'golangcodeoptionfactory.cpp',
#   'golangcodeoption.cpp',
#   '../liteeditor/faketooltip.cpp',
# ]
#
# plugin_headers = [
#   'golangcodeplugin.h',
#   'golangcode_global.h',
#   'golangcode.h',
#   'golangcodeoptionfactory.h',
#   'golangcodeoption.h',
#   '../liteeditor/faketooltip.h',
# ]
#
# plugin_ui = [
#   'golangcodeoption.ui',
# ]
#
# plugin_lib = static_library('golangcode',
#   plugin_sources,
#   plugin_headers,
#   ui : plugin_ui,
#   include_directories : [global_inc],
#   dependencies : [qt_dep, liteapp_lib],
# )
